minijinja/tests/snapshots/test_templates__vm@err_bad_trailing_underscore.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ 10_ }}"
info: {}
input_file: minijinja/tests/inputs/err_bad_trailing_underscore.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "'_' may not occur at end of number",
    name: "err_bad_trailing_underscore.txt",
    line: 1,
}

syntax error: '_' may not occur at end of number (in err_bad_trailing_underscore.txt:1)
----------------------- err_bad_trailing_underscore.txt -----------------------
   1 > {{ 10_ }}
     i       ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
